--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         }
         body {
             background-color: #f8f9fa; /* Cor de fundo do corpo */
-            padding-top: 80px; /* Espaçamento no topo para não ficar sob o cabeçalho */
-            padding-bottom: 50px; /* Espaçamento na parte inferior para não ficar sob o rodapé */
+            padding-top: 10%; /* Espaçamento no topo para não ficar sob o cabeçalho */
+            padding-bottom: 5%; /* Espaçamento na parte inferior para não ficar sob o rodapé */
         }
         main {
             background-color: #fff; /* Cor de fundo do conteúdo */
