adicionado BR para separar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 10px;
             width: 100%;
         }
         /* Ajustes de posicionamento */
@@ -28,8 +28,8 @@
         /* Estilo para o corpo */
         body {
             background-color: #f8f9fa; /* Cor de fundo do corpo */
-            padding-top: 30%; /* Espaçamento no topo para não ficar sob o cabeçalho */
-            padding-bottom: 5%; /* Espaçamento na parte inferior para não ficar sob o rodapé */
+            padding-top: 30px; /* Espaçamento no topo para não ficar sob o cabeçalho */
+            padding-bottom: 50px; /* Espaçamento na parte inferior para não ficar sob o rodapé */
         }
         main {
             background-color: #fff; /* Cor de fundo do conteúdo */
@@ -53,7 +53,7 @@
             </nav>
         </div>
     </header>
-
+    <br>
     <!-- Corpo -->
     <main class="container mt-5">
         <section>
@@ -69,7 +69,7 @@
             <p>Quisque tincidunt orci a justo lacinia, at dictum risus vestibulum.</p>
         </section>
     </main>
-
+    <br>
     <!-- Rodapé -->
     <footer class="bg-dark text-white">
         <div class="container">
