--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade Prática Página Responsiva</title>
+    <title>Minha Página Responsiva</title>
     <!-- Link para o CSS do Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Estilos personalizados -->
@@ -13,28 +13,12 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px;
-            width: 100%;
-        }
-        /* Ajustes de posicionamento */
-        header {
-            position: fixed;
-            top: 0;
-        }
-        footer {
-            position: fixed;
-            bottom: 0;
+            padding: 10px 0;
         }
         /* Estilo para o corpo */
-        body {
-            background-color: #f8f9fa; /* Cor de fundo do corpo */
-            padding-top: 30px; /* Espaçamento no topo para não ficar sob o cabeçalho */
-            padding-bottom: 50px; /* Espaçamento na parte inferior para não ficar sob o rodapé */
-        }
         main {
-            background-color: #fff; /* Cor de fundo do conteúdo */
-            padding: 20px; /* Espaçamento interno do conteúdo */
-            border-radius: 5px; /* Borda arredondada para o conteúdo */
+            margin-top: 80px; /* Ajuste de margem para o cabeçalho */
+            margin-bottom: 50px; /* Ajuste de margem para o rodapé */
         }
     </style>
 </head>
@@ -44,32 +28,40 @@
         <div class="container">
             <h1>Atividade Prática Página Responsiva</h1>
             <!-- Menu de navegação -->
-            <nav class="justify-content-center">
+            <nav>
                 <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Informações</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Registrar</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <br>
+
     <!-- Corpo -->
     <main class="container mt-5">
-        <section>
-            <h2>Seção 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae fermentum leo.</p>
-        </section>
-        <section>
-            <h2>Seção 2</h2>
-            <p>Nulla facilisi. Phasellus dapibus suscipit risus, euismod convallis sapien feugiat non.</p>
-        </section>
-        <section>
-            <h2>Seção 3</h2>
-            <p>Quisque tincidunt orci a justo lacinia, at dictum risus vestibulum.</p>
-        </section>
+        <div class="row">
+            <div class="col-md-4">
+                <section>
+                    <h2>Informações</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae fermentum leo.</p>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section>
+                    <h2>Downloads</h2>
+                    <p>Nulla facilisi. Phasellus dapibus suscipit risus, euismod convallis sapien feugiat non.</p>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section>
+                    <h2>Registrar</h2>
+                    <p>Quisque tincidunt orci a justo lacinia, at dictum risus vestibulum.</p>
+                </section>
+            </div>
+        </div>
     </main>
-    <br>
+
     <!-- Rodapé -->
     <footer class="bg-dark text-white">
         <div class="container">
